--- a/templates/default-ru-routers.yaml
+++ b/templates/default-ru-routers.yaml
@@ -4,8 +4,7 @@ external-controller: 0.0.0.0:9090 # адрес Dashboard панели Clash
 external-ui: ./zash
 external-ui-url: "https://github.com/Zephyruso/zashboard/releases/latest/download/dist-cdn-fonts.zip"
 
-mixed-port: 7890
-allow-lan: true
+allow-lan: false
 tcp-concurrent: true
 enable-process: true
 find-process-mode: always
@@ -39,7 +38,7 @@ sniffer:
 
 dns:
   enable: true
-  prefer-h3: true
+  prefer-h3: false
   use-hosts: true
   use-system-hosts: true
   listen: 127.0.0.1:6868
